--- a/about.html
+++ b/about.html
@@ -147,125 +147,56 @@
                     </div>
 
                     <div class="flip-card-wrapper ">
-                        <div class="flip-card ">
-                            <div class="user-img text-xs-center ">
-                                <img src="https://api.adorable.io/avatars/283/1" alt="about duy">
-                                <h4 class=" ">Duy Pham</h4>
-                                <i class="position ">Developer</i>
-
-                                <!-- <i> = italic-->
-
-                            </div>
-                            <div class="user-info ">
-                                <h3 class="name ">Duy Pham</h3>
-                                <i class="position ">Developer</i>
-                                <p class="description ">A conscious human is driven by their conscience, not popular opinion.</p>
-                                <div style="margin: 24px 0; ">
-                                    <a href="# "><i class="fa fa-dribbble "></i></a>
-                                    <a href="# "><i class="fa fa-twitter "></i></a>
-                                    <a href="# "><i class="fa fa-linkedin "></i></a>
-                                    <a href="# "><i class="fa fa-facebook "></i></a>
-                                </div>
-                            </div>
-
-
+                        <div class="img-wrapper">
+                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
+                            <h2>David james</h2>
+                            <ul>
+                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
+                            </ul>
                         </div>
-                        <div class="flip-card ">
-                            <div class="user-img text-xs-center ">
-                                <img src="https://api.adorable.io/avatars/283/3" alt="about bao">
-                                <h4 class=" ">Hai Bao Tran</h4>
-                                <i class="position ">Scrum Master</i>
-
-                                <!-- <i> = italic-->
-
-                            </div>
-                            <div class="user-info ">
-                                <h3 class="name ">Hai Bao Tran</h3>
-                                <i class="position ">Scrum Master</i>
-                                <p class="description ">Anybody can write code that a computer can understand. Good programmers write code that humans can understand.</p>
-                                <div style="margin: 24px 0; ">
-                                    <a href="# "><i class="fa fa-dribbble "></i></a>
-                                    <a href="# "><i class="fa fa-twitter "></i></a>
-                                    <a href="# "><i class="fa fa-linkedin "></i></a>
-                                    <a href="# "><i class="fa fa-facebook "></i></a>
-                                </div>
-                            </div>
-
-
+                        <div class="img-wrapper">
+                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
+                            <h2>David james</h2>
+                            <ul>
+                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
+                            </ul>
                         </div>
-                        <div class="flip-card ">
-                            <div class="user-img text-xs-center ">
-                                <img src="https://api.adorable.io/avatars/283/2" alt="about ji">
-                                <h4 class=" ">Ji Kim</h4>
-                                <i class="position ">Product Owner</i>
-
-                                <!-- <i> = italic-->
-
-                            </div>
-                            <div class="user-info ">
-                                <h3 class="name ">Ji Kim</h3>
-                                <i class="position ">Product Owner</i>
-                                <p class="description ">Always code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live.</p>
-                                <div style="margin: 24px 0; ">
-                                    <a href="# "><i class="fa fa-dribbble "></i></a>
-                                    <a href="# "><i class="fa fa-twitter "></i></a>
-                                    <a href="# "><i class="fa fa-linkedin "></i></a>
-                                    <a href="# "><i class="fa fa-facebook "></i></a>
-                                </div>
-                            </div>
-
-
+                        <div class="img-wrapper">
+                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
+                            <h2>David james</h2>
+                            <ul>
+                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
+                            </ul>
                         </div>
-                        <div class="flip-card ">
-                            <div class="user-img text-xs-center ">
-                                <img src="https://api.adorable.io/avatars/283/10" alt="ko thay img ">
-                                <h4 class=" ">Minh Nguyen</h4>
-                                <i class="position ">Developer</i>
-
-                                <!-- <i> = italic-->
-
-                            </div>
-                            <div class="user-info ">
-                                <h3 class="name ">Minh Nguyen</h3>
-                                <i class="position ">Developer</i>
-                                <p class="description ">Give a man a program, frustrate him for a day. Teach a man to program, frustrate him for a lifetime.</p>
-                                <div style="margin: 24px 0; ">
-                                    <a href="# "><i class="fa fa-dribbble "></i></a>
-                                    <a href="# "><i class="fa fa-twitter "></i></a>
-                                    <a href="# "><i class="fa fa-linkedin "></i></a>
-                                    <a href="# "><i class="fa fa-facebook "></i></a>
-                                </div>
-                            </div>
-
-
+                        <div class="img-wrapper">
+                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
+                            <h2>David james</h2>
+                            <ul>
+                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
+                            </ul>
                         </div>
-
-                        <div class="flip-card ">
-                            <div class="user-img text-xs-center ">
-                                <img src="https://api.adorable.io/avatars/286/29" alt="ko thay img ">
-                                <h4 class=" ">Mit Ti</h4>
-                                <i class="position ">Developer</i>
-
-                                <!-- <i> = italic-->
-
-                            </div>
-                            <div class="user-info ">
-                                <h3 class="name ">Mit Ti</h3>
-                                <i class="position ">Developer</i>
-                                <p class="description ">The most important property of a program is whether it accomplishes the intention of its user.</p>
-                                <div style="margin: 24px 0; ">
-                                    <a href="# "><i class="fa fa-dribbble "></i></a>
-                                    <a href="# "><i class="fa fa-twitter "></i></a>
-                                    <a href="# "><i class="fa fa-linkedin "></i></a>
-                                    <a href="# "><i class="fa fa-facebook "></i></a>
-                                </div>
-                            </div>
-
-
+                        <div class="img-wrapper">
+                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
+                            <h2>David james</h2>
+                            <ul>
+                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
+                            </ul>
                         </div>
-
-
-
                     </div>
 
 
