--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="about.css">
     <link rel="stylesheet" type="text/css" href="nav-footer.css">
-    
+
     <link rel="shortcut icon" type="image/png" href="img/liv-favicon.png" />
     <script type="text/javascript" src="./javascript.js"></script>
     <!-- AOS link-->
@@ -65,7 +65,8 @@
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"><span class="flag-icon flag-icon-us"></span> English</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown09">
-                            <a class="dropdown-item" href="#vn"><span class="flag-icon flag-icon-vn"></span> Vietnamese</a>
+                            <a class="dropdown-item" href="#vn"><span class="flag-icon flag-icon-vn"></span>
+                                Vietnamese</a>
                             <a class="dropdown-item" href="#kr"><span class="flag-icon flag-icon-kr"></span> Korean</a>
                         </div>
                     </li>
@@ -82,23 +83,23 @@
 
     </nav>
     <!--Duy section - Navbar-->
-  <!--Bao section - about us-->
-  <div class="empty" style="height:83px"></div>
-  <section class="about-us">
-    <div class="about-us-banner">
-        <div class="about-us-banner-img">
+    <!--Bao section - about us-->
+    <div class="empty" style="height:83px"></div>
+    <section class="about-us">
+        <div class="about-us-banner">
+            <div class="about-us-banner-img">
 
-        </div>
-        <div class="about-us-banner-content">
-            <div class="container">
-                <!-- <h1>ABOUT US</h1> -->
-                <p>WE ASPIRE TO CHANGE THE CONCEPT OF TRAVELING BY MAKING IT MORE AUTHENTIC, MORE LOCAL</p>
+            </div>
+            <div class="about-us-banner-content">
+                <div class="container">
+                    <!-- <h1>ABOUT US</h1> -->
+                    <p>WE ASPIRE TO CHANGE THE CONCEPT OF TRAVELING BY MAKING IT MORE AUTHENTIC, MORE LOCAL</p>
+                </div>
+
             </div>
 
         </div>
-
-    </div>
-    <!-- <div class="about-us-story">
+        <!-- <div class="about-us-story">
         <div class="container">
             <div class="about-us-story-content">
                 <h2>OUR STORY</h2>
@@ -128,86 +129,111 @@
             </div>
         </div>
     </div> -->
-    <div class="team-member">
-        <div class="container">
-            <div class="meet-our-teams ">
-                <div class="meet-our-teams-contain ">
-                    <h3 class="meet-our-teams-contain-title ">Meet the LIV Team</h3>
-                    <div class="line-wrapper ">
-                        <div class="line1 ">
+        <div class="team-member">
+            <div class="container">
+                <div class="meet-our-teams ">
+                    <div class="meet-our-teams-contain ">
+                        <h3 class="meet-our-teams-contain-title ">Meet the LIV Team</h3>
+                        <div class="line-wrapper ">
+                            <div class="line1 ">
 
 
-                            <span class="center "></span>
-                            <div class="line2 "></div>
+                                <span class="center "></span>
+                                <div class="line2 "></div>
 
 
+                            </div>
+
+
+                        </div>
+
+                        <div class="flip-card-wrapper ">
+                            <div class="img-wrapper">
+                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                    alt="Atul Prajapati">
+                                <h2>David james</h2>
+                                <ul>
+                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    </li>
+                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                                class="fab fa-youtube"></i></a></li>
+                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                </ul>
+                            </div>
+                            <div class="img-wrapper">
+                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                    alt="Atul Prajapati">
+                                <h2>David james</h2>
+                                <ul>
+                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    </li>
+                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                                class="fab fa-youtube"></i></a></li>
+                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                </ul>
+                            </div>
+                            <div class="img-wrapper">
+                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                    alt="Atul Prajapati">
+                                <h2>David james</h2>
+                                <ul>
+                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    </li>
+                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                                class="fab fa-youtube"></i></a></li>
+                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                </ul>
+                            </div>
+                            <div class="img-wrapper">
+                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                    alt="Atul Prajapati">
+                                <h2>David james</h2>
+                                <ul>
+                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    </li>
+                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                                class="fab fa-youtube"></i></a></li>
+                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                </ul>
+                            </div>
+                            <div class="img-wrapper">
+                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                    alt="Atul Prajapati">
+                                <h2>David james</h2>
+                                <ul>
+                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    </li>
+                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                                class="fab fa-youtube"></i></a></li>
+                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                </ul>
+                            </div>
                         </div>
 
 
                     </div>
-
-                    <div class="flip-card-wrapper ">
-                        <div class="img-wrapper">
-                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-                            <h2>David james</h2>
-                            <ul>
-                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="img-wrapper">
-                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-                            <h2>David james</h2>
-                            <ul>
-                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="img-wrapper">
-                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-                            <h2>David james</h2>
-                            <ul>
-                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="img-wrapper">
-                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-                            <h2>David james</h2>
-                            <ul>
-                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="img-wrapper">
-                            <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-                            <h2>David james</h2>
-                            <ul>
-                                <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-
-
                 </div>
             </div>
         </div>
-    </div>
 
 
-</section>
-<!--Bao section - about us-->
+    </section>
+    <!--Bao section - about us-->
 
     <!--Duy section - Footer-->
     <footer class="pt-4  pt-md-5 border-top BG-footer mobile-footer-duy">
