Some changes to about content and css

--- a/about.html
+++ b/about.html
@@ -149,78 +149,78 @@
 
                         <div class="flip-card-wrapper ">
                             <div class="img-wrapper">
-                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                    alt="Atul Prajapati">
-                                <h2>David james</h2>
+                                <img src="https://api.adorable.io/avatars/283/1"
+                                    alt="about Duy">
+                                <h2>Duy Pham</h2>
                                 <ul>
-                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="#"><i
                                                 class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                    <li><a href=""><i
                                                 class="fab fa-youtube"></i></a></li>
-                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                    <li><em>"The best error message is the one that never shows up."</em></li>
                                 </ul>
                             </div>
                             <div class="img-wrapper">
-                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                    alt="Atul Prajapati">
-                                <h2>David james</h2>
+                                <img src="https://api.adorable.io/avatars/283/3"
+                                    alt="about Bao">
+                                <h2>Hai Bao Tran</h2>
                                 <ul>
-                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="#"><i
                                                 class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                    <li><a href="#"><i
                                                 class="fab fa-youtube"></i></a></li>
-                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                    <li><em>"Anybody can write code that a computer can understand. Good programmers write code that humans can understand."</em></li>
                                 </ul>
                             </div>
                             <div class="img-wrapper">
-                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                    alt="Atul Prajapati">
-                                <h2>David james</h2>
+                                <img src="https://api.adorable.io/avatars/283/2"
+                                    alt="about Ji">
+                                <h2>Ji Kim</h2>
                                 <ul>
-                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="#"><i
                                                 class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                    <li><a href="#"><i
                                                 class="fab fa-youtube"></i></a></li>
-                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                    <li><em>"Always code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live."</em></li>
                                 </ul>
                             </div>
                             <div class="img-wrapper">
-                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                    alt="Atul Prajapati">
-                                <h2>David james</h2>
+                                <img src="https://api.adorable.io/avatars/283/10"
+                                    alt="about Minh">
+                                <h2>Minh Nguyen</h2>
                                 <ul>
-                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="#"><i
                                                 class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                    <li><a href="#"><i
                                                 class="fab fa-youtube"></i></a></li>
-                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                    <li><em>"Give a man a program, frustrate him for a day. Teach a man to program, frustrate him for a lifetime."</em></li>
                                 </ul>
                             </div>
                             <div class="img-wrapper">
-                                <img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                    alt="Atul Prajapati">
-                                <h2>David james</h2>
+                                <img src="https://api.adorable.io/avatars/286/29"
+                                    alt="about Mit">
+                                <h2>Mit Ti</h2>
                                 <ul>
-                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="#"><i
                                                 class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i
+                                    <li><a href="#"><i
                                                 class="fab fa-youtube"></i></a></li>
-                                    <li><em>"Không có gì quý hơn độc lập tự do"</em></li>
+                                    <li><em>"Programming isn't about what you know; it's about what you can figure out."</em></li>
                                 </ul>
                             </div>
                         </div>
